# vyatta-op

./: .frlog  .gitignore  .merge-branch-exclude  COPYING  Jenkinsfile  Makefile.am  README  configure.ac  gen-monitor-interface-templates.sh  gen-monitor-vif-interface-templates.sh  gen-unpriv-commands.sh  mkcl  mkversion
.github/workflows/: mergifyio_backport.yml  stale.yml
debian/: README  changelog  conffiles  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  lintian  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  vyatta-op-default.ex  vyatta-op.doc-base.EX  vyatta-op.postinst.in  vyatta-op.postrm.in  watch.ex
etc/: bash.bash_logout
etc/bash_completion.d/: 10vyatta-op  vyatta-op  vyatta-op-run
etc/default/: vyatta.in
functions/: cpu-info  tech-support  tech-support-brief
functions/allowed/: hosts
functions/interpreter/: vyatta-common  vyatta-image-complete  vyatta-op-run  vyatta-unpriv
lib/Vyatta/VRRP/: OPMode.pm
op-templates/date/: node.def
op-templates/date/op.tag/: node.def
op-templates/terminal/length/: node.def
scripts/: count  dhcpv6-client-show-leases.pl  limericks.py  match  maya-date.py  no-match  no-more  node-exists.pl  ping  rename-image.pl  show-dhcp-leases.pl  show-image-storage.pl  show-users.pl  show_interfaces  show_interfaces_ethernet  show_interfaces_loopback  show_interfaces_statistics  show_interfaces_summary  show_interfaces_system  show_interfaces_tunnel  show_version  ssh-server-key  tech-support-archive  vyatta-boot-image.pl  vyatta-clear-conntrack  vyatta-cpu-summary.pl  vyatta-delete-log-file.sh  vyatta-ethtool-wrapper  vyatta-gettime.pl  vyatta-identify-interface.pl  vyatta-image-tools.pl  vyatta-monitor  vyatta-monitor-background  vyatta-monitor-background-stop  vyatta-monitor-check-rule-log  vyatta-monitor-cleanup  vyatta-monitor-list  vyatta-op-cmd-wrapper  vyatta-op-dns-forwarding.pl  vyatta-op-dynamic-dns.pl  (+30 more)
scripts/vrrp/: vyatta-show-vrrp.pl
src/: render_xml.cc  xsl_processor.cc  xsl_processor.hh
templates/add/: node.def
templates/add/raid/: node.def
templates/add/system/: node.def
templates/assign/date/: node.def
templates/clear/: node.def
templates/clear/arp/: node.def
templates/clear/arp6/: node.def
templates/clear/console/: node.def
templates/clear/dns/: node.def
templates/clear/interfaces/: node.def
templates/clear/vrrp/: node.def
templates/clone/: node.def
templates/clone/system/: node.def
templates/configure/: node.def
templates/connect/: node.def
templates/connect/interface/: node.def
templates/copy/: node.def
templates/copy/file/: node.def
templates/date/: node.def
templates/date/local/: node.def
templates/date/ntp/: node.def
templates/delete/: node.def
templates/delete/file/: node.def
templates/delete/log/: node.def
templates/delete/raid/: node.def
templates/delete/system/: node.def
templates/disconnect/: node.def
templates/disconnect/interface/: node.def
templates/force/: node.def
templates/force/arp/: node.def
templates/format/: node.def
templates/format/disk/: node.def
templates/format/system-floppy/: node.def
templates/generate/: node.def
templates/generate/ssh-server-key/: node.def
templates/generate/tech-support/: node.def
templates/init-floppy/: node.def
templates/install/: node.def
templates/install-image/node.tag/: node.def
templates/install/image/: node.def
templates/install/system/: node.def
templates/monitor/: node.def
templates/monitor/bandwidth-test/: node.def
templates/monitor/cluster/: node.def
templates/monitor/command/: node.def
templates/monitor/conntrack-sync/: node.def
templates/monitor/content-inspection/: node.def
templates/monitor/dns/: node.def
templates/monitor/firewall/: node.def
templates/monitor/https/: node.def
templates/monitor/interfaces/: node.def
templates/monitor/log/: node.def
templates/monitor/nat/: node.def
templates/monitor/openvpn/: node.def
templates/monitor/service/: node.def
templates/monitor/snmp/: node.def
templates/monitor/stop-all/: node.def
templates/monitor/traceroute/: node.def
templates/monitor/vpn/: node.def
templates/monitor/vrrp/: node.def
templates/monitor/webproxy/: node.def
templates/no/: node.def
templates/ping/: node.def
templates/ping/ipv4/: node.def
templates/ping/node.tag/: node.def
templates/ping6/: node.def
templates/ping6/node.tag/: node.def
templates/poweroff/: node.def
templates/poweroff/at/: node.def
templates/poweroff/cancel/: node.def
templates/poweroff/now/: node.def
templates/reboot/: node.def
templates/reboot/.at/: node.def
templates/reboot/cancel/: node.def
templates/reboot/now/: node.def
templates/release/: node.def
templates/release/dhcp/: node.def
templates/release/dhcpv6/: node.def
templates/remove/: node.def
templates/remove/installed-image/: node.def
templates/rename/: node.def
templates/rename/system/: node.def
templates/renew/: node.def
templates/renew/dhcp/: node.def
templates/renew/dhcpv6/: node.def
templates/reset/: node.def
templates/reset/connection-tracking/: node.def
templates/reset/dns/: node.def
templates/reset/ip/: node.def
templates/reset/ipv6/: node.def
templates/reset/terminal/: node.def
templates/reset/vrrp/: node.def
templates/restart/: node.def
templates/restart/dns/: node.def
templates/restart/ntp/: node.def
templates/restart/snmp/: node.def
templates/set/: node.def
templates/show/: node.def
templates/shutdown/: node.def
templates/telnet/: node.def
templates/terminal/: node.def
templates/traceroute/: node.def
templates/update/: node.def
(+831 files in other folders)
